Added last method

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Calculator/temp.txt
 Calculator/old.txt
 Calculator/.idea/modules.xml
 Calculator/.idea/Calculator.iml
+Calculator/.idea/workspace-DESKTOP-DAVIDE.xml
