Added more checks, also wrote a small report in the readme

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Calculator/old.txt
 Calculator/.idea/modules.xml
 Calculator/.idea/Calculator.iml
 Calculator/.idea/workspace-DESKTOP-DAVIDE.xml
+Calculator/.idea/workspace-MacBook Air di Davide.xml
+Calculator/.idea/workspace-DESKTOP-DAVIDE-2.xml
